free-k8s-cluster/oci-native-ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lag0
  namespace: default
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
      - "*.lag0.com.br"
    secretName: lag0-certificate
  rules:
  - host: "*.lag0.com.br"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 443
  ingressClassName: oci-ingress-class
